@@ -1,4 +1,6 @@
 1.3.5 - TBD
+    * Fixed a rendering issue for corner stairs causing various configurations
+      to render incorrectly
     * Fixed an error causing incorrect lighting of underwater blocks
     * Fixed button rendering (render new button orientations correctly)
     * The render reset confirmation feature now works as it should when the
